examples/test/testpolicy14623.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14623
  namespace: namespace390
spec:
  podSelector:
    matchLabels:
      key18: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value39
          key36: value2
          key46: value37
      podSelector:
        matchLabels:
          key15: value16
          key47: value23
